BUG: (10/13/08, DN) EPoint[] variables can't contain nulls (Bug #1901). FIX: In database.Variable and in readers/writers  .
git-svn-id: https://svn.java.net/svn/electric~svn/trunk@8302 b64ed6c1-75a8-e629-b1da-d0dae74a743a